# graphene_workshop

./: .pre-commit-config.yaml  README.md
graphene_workshop/: app.py  data.py  data_example.py  healthcheck.py  pyproject.toml
graphene_workshop/schema/: query.py  types.py
graphene_workshop_completed/: app.py  pyproject.toml  runserver.py
graphene_workshop_completed/schema/: mutation.py  query.py  types.py
